v1.0.0/modules/schema/pages/class/MeasurementValueQuality.adoc
= `MeasurementValueQuality`
:toclevels: 4


+++Measurement quality flags. Bits 0-10 are defined for substation automation in IEC 61850-7-3. Bits 11-15 are reserved for future expansion by that document. Bits 16-31 are reserved for EMS applications.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MeasurementValueQuality`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/Quality61850.adoc[`Quality61850`]
** *`MeasurementValueQuality`*
 *** xref::class/AnalogMeasurementValueQuality.adoc[`AnalogMeasurementValueQuality`]
 *** xref::class/DiscreteMeasurementValueQuality.adoc[`DiscreteMeasurementValueQuality`]


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MeasurementValueQuality {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



MeasurementValue {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




MeasurementValueQuality -> MeasurementValue: MeasurementValue


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<MeasurementValue,`MeasurementValue`>>
| 1
| xref::class/MeasurementValue.adoc[`MeasurementValue`]
| +++A MeasurementValue has a MeasurementValueQuality associated with it.+++

| <<badReference,`badReference`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Measurement value may be incorrect due to a reference being out of calibration.+++

| <<estimatorReplaced,`estimatorReplaced`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Value has been replaced by State Estimator. estimatorReplaced is not an IEC61850 quality bit but has been put in this class for convenience.+++

| <<failure,`failure`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++This identifier indicates that a supervision function has detected an internal or external failure, e.g. communication failure.+++

| <<oldData,`oldData`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Measurement value is old and possibly invalid, as it has not been successfully updated during a specified time interval.+++

| <<operatorBlocked,`operatorBlocked`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Measurement value is blocked and hence unavailable for transmission.+++

| <<oscillatory,`oscillatory`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++To prevent some overload of the communication it is sensible to detect and suppress oscillating (fast changing) binary inputs. If a signal changes in a defined time twice in the same direction (from 0 to 1 or from 1 to 0) then oscillation is detected and the detail quality identifier "oscillatory" is set. If it is detected a configured numbers of transient changes could be passed by. In this time the validity status "questionable" is set. If after this defined numbers of changes the signal is still in the oscillating state the value shall be set either to the opposite state of the previous stable value or to a defined default value. In this case the validity status "questionable" is reset and "invalid" is set as long as the signal is oscillating. If it is configured such that no transient changes should be passed by then the validity status "invalid" is set immediately in addition to the detail quality identifier "oscillatory" (used for status information only).+++

| <<outOfRange,`outOfRange`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Measurement value is beyond a predefined range of value.+++

| <<overFlow,`overFlow`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Measurement value is beyond the capability of being  represented properly. For example, a counter value overflows from maximum count back to a value of zero.+++

| <<source,`source`>>
| 0..1
| xref::enumeration/Source.adoc[`Source`]
| +++Source gives information related to the origin of a value. The value may be acquired from the process, defaulted or substituted.+++

| <<suspect,`suspect`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++A correlation function has detected that the value is not consistent with other values. Typically set by a network State Estimator.+++

| <<test,`test`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Measurement value is transmitted for test purposes.+++

| <<validity,`validity`>>
| 0..1
| xref::enumeration/Validity.adoc[`Validity`]
| +++Validity of the measurement value.+++
|===

'''


//[discrete]
[#badReference]
=== `badReference`
+++Measurement value may be incorrect due to a reference being out of calibration.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Quality61850.badReference`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Quality61850.adoc[`Quality61850`]


|===

//[discrete]
[#estimatorReplaced]
=== `estimatorReplaced`
+++Value has been replaced by State Estimator. estimatorReplaced is not an IEC61850 quality bit but has been put in this class for convenience.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Quality61850.estimatorReplaced`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Quality61850.adoc[`Quality61850`]


|===

//[discrete]
[#failure]
=== `failure`
+++This identifier indicates that a supervision function has detected an internal or external failure, e.g. communication failure.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Quality61850.failure`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Quality61850.adoc[`Quality61850`]


|===

//[discrete]
[#MeasurementValue]
=== `MeasurementValue`
+++A MeasurementValue has a MeasurementValueQuality associated with it.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeasurementValueQuality.MeasurementValue`
| Cardinality
| 1
| Type
| xref::class/MeasurementValue.adoc[`MeasurementValue`]


|===

//[discrete]
[#oldData]
=== `oldData`
+++Measurement value is old and possibly invalid, as it has not been successfully updated during a specified time interval.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Quality61850.oldData`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Quality61850.adoc[`Quality61850`]


|===

//[discrete]
[#operatorBlocked]
=== `operatorBlocked`
+++Measurement value is blocked and hence unavailable for transmission.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Quality61850.operatorBlocked`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Quality61850.adoc[`Quality61850`]


|===

//[discrete]
[#oscillatory]
=== `oscillatory`
+++To prevent some overload of the communication it is sensible to detect and suppress oscillating (fast changing) binary inputs. If a signal changes in a defined time twice in the same direction (from 0 to 1 or from 1 to 0) then oscillation is detected and the detail quality identifier "oscillatory" is set. If it is detected a configured numbers of transient changes could be passed by. In this time the validity status "questionable" is set. If after this defined numbers of changes the signal is still in the oscillating state the value shall be set either to the opposite state of the previous stable value or to a defined default value. In this case the validity status "questionable" is reset and "invalid" is set as long as the signal is oscillating. If it is configured such that no transient changes should be passed by then the validity status "invalid" is set immediately in addition to the detail quality identifier "oscillatory" (used for status information only).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Quality61850.oscillatory`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Quality61850.adoc[`Quality61850`]


|===

//[discrete]
[#outOfRange]
=== `outOfRange`
+++Measurement value is beyond a predefined range of value.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Quality61850.outOfRange`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Quality61850.adoc[`Quality61850`]


|===

//[discrete]
[#overFlow]
=== `overFlow`
+++Measurement value is beyond the capability of being  represented properly. For example, a counter value overflows from maximum count back to a value of zero.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Quality61850.overFlow`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Quality61850.adoc[`Quality61850`]


|===

//[discrete]
[#source]
=== `source`
+++Source gives information related to the origin of a value. The value may be acquired from the process, defaulted or substituted.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Quality61850.source`
| Cardinality
| 0..1
| Type
| xref::enumeration/Source.adoc[`Source`]

| Inherited from
| xref::class/Quality61850.adoc[`Quality61850`]


|===

//[discrete]
[#suspect]
=== `suspect`
+++A correlation function has detected that the value is not consistent with other values. Typically set by a network State Estimator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Quality61850.suspect`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Quality61850.adoc[`Quality61850`]


|===

//[discrete]
[#test]
=== `test`
+++Measurement value is transmitted for test purposes.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Quality61850.test`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Quality61850.adoc[`Quality61850`]


|===

//[discrete]
[#validity]
=== `validity`
+++Validity of the measurement value.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Quality61850.validity`
| Cardinality
| 0..1
| Type
| xref::enumeration/Validity.adoc[`Validity`]

| Inherited from
| xref::class/Quality61850.adoc[`Quality61850`]


|===


